--- a/day1/index.html
+++ b/day1/index.html
@@ -1,1 +1,3 @@
 <h1>This is my first project  on react</h1>
+
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste consectetur itaque odit ducimus obcaecati hic corrupti sint illo corporis similique sequi voluptate, veniam necessitatibus repellendus adipisci architecto nesciunt molestias reiciendis.</p>
